修改下添加访问统计的文本

--- a/themes/yilia/layout/_partial/footer.ejs
+++ b/themes/yilia/layout/_partial/footer.ejs
@@ -8,7 +8,7 @@
       	<div class="footer-right">
           <span id="busuanzi_container_site_pv">
               guimeisang博客总访问量<span id="busuanzi_value_site_pv"></span>次
-              本文总阅读量<span id="busuanzi_value_page_pv"></span>次
+              当前页阅读量<span id="busuanzi_value_page_pv"></span>次
           </span>
       	</div>
     </div>
